# MATILDA.FT

./: .gitignore  README.md  compile  makefile
Deep_Learning_code/: Gen_Init_pot.py  euler_method.py  load_and_preproc_data.py  main_scft.py  model_setup_and_training.py  parameter.py  periodic_padding_2d.py  plot_prediction.py  pred_density.py  system_setup.py  train_neural_network.py
Deep_Learning_examples/: Extract_single_frame_density_and_plot.py  Ground_Truth_MATILDA_input  testpad.py
MATILDA.FT/src/: Box.cu  Box.h  Compute.h  Compute_avg_rho.cu  Compute_avg_rho.h  Compute_avg_sk.cu  Compute_chempot.h  Compute_sk.cu  Compute_sk.h  Compute_widom.h  Extraforce.cu  Extraforce_dpd.cu  Extraforce_dpd.h  Extraforce_lewis.cu  Extraforce_lewis.h  Extraforce_midpush.cu  Extraforce_midpush.h  Extraforce_wall.cu  FTS_Box.cu  FTS_Box.h  angles.cu  bonds.cu  constants.h  cuda_random_posits.cu  device_EM_integrator.cu  device_GJF_integrator.cu  device_angles.cu  device_array_utils.cu  device_bonds.cu  device_comm_utils.h  device_grid_utils.cu  device_ms_utils.cu  device_utils.cu  device_utils.cuh  fft_wrapper.cu  fft_wrapper.h  field_component.h  fts_molecule.cu  fts_molecule.h  fts_molecule_linear.cu  (+35 more)
dynamic/: MATILDA.FT.input  ad_file2  bonds1  bonds1_log  bonds2  bonds2_log  id_file2  input  input.data  make_bonders.py  resume.lammsptrj  resume_bonds  sub.bash  traj.lammpstrj
dynamic-bonds/: bonds2.py  input  make_bonders.py
dynamic_bonds_test/: MATILDA.FT.input  ad_input  ad_input copy  bonds  bonds_2_4  diffusion..py  good_seed.input  input copy 2.data  input.data  make_bonders.py  (+3 more)
(+311 files in other folders)
